# opencode-council

./: .gitignore  AGENTS.md  TODO.md  final_plan.md  pyproject.toml  solution_to_ToDo.md
council/: config.json
council/20260420_003802/: config.json
council/20260420_003802/opencode/gemini-1.5-pro/: analysis.md  plan.md
council/20260420_003802/opencode/gemini-2.5-flash/: analysis.md  plan.md
opencode_council/: __init__.py  __main__.py  config.py  execution.py  tools.py  tui.py
